resolve navbar issue on smaller screen

--- a/css/anime.css
+++ b/css/anime.css
@@ -87,21 +87,6 @@
   }
 }
 
-.clock {
-  width: 400px;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url(/images/clock.png);
-  background-size: cover;
-  border-radius: 50%;
-  border: 4px solid #091921;
-  box-shadow: 0 -15px 15px rgba(39, 149, 233, 0.05),
-    inset 0 -15px 15px rgba(204, 40, 135, 0.234),
-    0 15px 15px rgba(39, 149, 233, 0.05), inset 0 15px 15px rgba(0, 0, 0, 0.03);
-}
-
 /* word animation */
 
 .word {
